crates/linerule-core/tests/snapshots/integration_render_snapshot__snapshot_horizontal_negative_cursor.snap
---
source: crates/linerule-core/tests/integration_render_snapshot.rs
assertion_line: 69
expression: f
---
OverlayFrame {
    layers: [
        Layer {
            geometry: Rect(
                ScreenRect {
                    origin: Point {
                        x: 0,
                        y: -36,
                        _space: PhantomData<fn() -> linerule_core::geometry::Logical>,
                    },
                    width: 1920,
                    height: 1116,
                },
            ),
            brush: Solid(
                Rgba {
                    r: 0,
                    g: 0,
                    b: 0,
                    a: 218,
                },
            ),
        },
        Layer {
            geometry: Rect(
                ScreenRect {
                    origin: Point {
                        x: 1890,
                        y: 12,
                        _space: PhantomData<fn() -> linerule_core::geometry::Logical>,
                    },
                    width: 18,
                    height: 4,
                },
            ),
            brush: Solid(
                Rgba {
                    r: 255,
                    g: 255,
                    b: 255,
                    a: 194,
                },
            ),
        },
    ],
}
