crates/linerule-core/tests/snapshots/integration_render_snapshot__snapshot_off_mode_empty.snap
---
source: crates/linerule-core/tests/integration_render_snapshot.rs
expression: f
---
OverlayFrame {
    layers: [],
}
