crates/linerule-core/tests/snapshots/integration_render_snapshot__snapshot_vertical_left_edge.snap
---
source: crates/linerule-core/tests/integration_render_snapshot.rs
expression: f
---
OverlayFrame {
    layers: [
        Layer {
            geometry: Rect(
                ScreenRect {
                    origin: Point {
                        x: 14,
                        y: 0,
                        _space: PhantomData<fn() -> linerule_core::geometry::Logical>,
                    },
                    width: 1906,
                    height: 1080,
                },
            ),
            brush: Solid(
                Rgba {
                    r: 0,
                    g: 0,
                    b: 0,
                    a: 218,
                },
            ),
        },
    ],
}
