crates/linerule-core/tests/snapshots/integration_render_snapshot__snapshot_vertical_right_edge.snap
---
source: crates/linerule-core/tests/integration_render_snapshot.rs
assertion_line: 61
expression: f
---
OverlayFrame {
    layers: [
        Layer {
            geometry: Rect(
                ScreenRect {
                    origin: Point {
                        x: 0,
                        y: 0,
                        _space: PhantomData<fn() -> linerule_core::geometry::Logical>,
                    },
                    width: 1906,
                    height: 1080,
                },
            ),
            brush: Solid(
                Rgba {
                    r: 0,
                    g: 0,
                    b: 0,
                    a: 218,
                },
            ),
        },
        Layer {
            geometry: Rect(
                ScreenRect {
                    origin: Point {
                        x: 1904,
                        y: 12,
                        _space: PhantomData<fn() -> linerule_core::geometry::Logical>,
                    },
                    width: 4,
                    height: 18,
                },
            ),
            brush: Solid(
                Rgba {
                    r: 255,
                    g: 255,
                    b: 255,
                    a: 194,
                },
            ),
        },
    ],
}
